<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddClientActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_last_name"
        />
    <EditText
        android:id="@+id/add_client_last_name_edittext"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_gender"/>


    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_client_gender_radiogroupe">

    <RadioButton
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_client_gender_woman_radiobutton"
        android:text="@string/gender_women"/>

    <RadioButton
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_client_gender_man_radiobutton"
        android:text="@string/gender_man"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_age"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            tools:text="32"
            android:id="@+id/add_client_age_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            tools:progress="32"
            android:id="@+id/add_client_age_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Niveau"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/levels"
        android:id="@+id/add_client_level_spinner"
    />

    <Button
        android:id="@+id/add_client_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_label"
        />

</LinearLayout>